@startuml
title DMS - Domain Workflow Dokumen

skinparam classAttributeIconSize 0
hide circle

package "Workflow Dokumen" {
  class User <<external auth>> {
    displayName
  }

  class DokumenTransaksi {
    status
    currentStep
    revisionTarget
    nominalRealisasi
  }

  class LampiranMetadata {
    displayName
  }

  class LogAktivitas {
    action
    createdAt
  }

  enum WorkflowStatus {
    DRAFT
    IN_PPK_VALIDATION
    IN_BENDAHARA_APPROVAL
    NEED_REVISION
    COMPLETED
    TERSIMPAN
    ARCHIVED
  }

  enum RevisionTarget {
    USER
    PPK
  }
}

User "1" --> "0..*" DokumenTransaksi : creates
DokumenTransaksi "1" *-- "0..*" LampiranMetadata : attachments
DokumenTransaksi "1" *-- "0..*" LogAktivitas : audit trail
LogAktivitas "0..*" --> "1" User : actor
DokumenTransaksi ..> WorkflowStatus
DokumenTransaksi ..> RevisionTarget

note right of WorkflowStatus
  Material:
  DRAFT -> IN_PPK_VALIDATION -> IN_BENDAHARA_APPROVAL -> COMPLETED

  Label pengguna untuk tahap IN_BENDAHARA_APPROVAL adalah persetujuan PPSPM.
  BENDAHARA tetap hanya konstanta internal.

  Non-material:
  DRAFT -> TERSIMPAN

  ARCHIVED masih ada di konstanta status dokumen,
  tetapi authority arsip runtime berada pada BerkasArsip folder-first.
end note

note bottom of DokumenTransaksi
  Dokumen material memakai nominalRealisasi.
  Dokumen non-material tidak memakai nominalRealisasi.
  Setelah COMPLETED/TERSIMPAN, laporan memakai metadata final.
  Diagram ini tidak memodelkan runtime arsip legacy.
end note

note bottom of LogAktivitas
  log_aktivitas bersifat append-only.
end note

@enduml
